# esp-gui-lib

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  converticons.sh  icon_templ.cpp.tmpl  icon_templ.h.tmpl
iconconvert/: build.sh  iconconvert.pro  main.cpp
src/: accessorinterface.h  actioninterface.h  backinterface.h  buttonsinterface.h  changevaluedisplay.cpp  changevaluedisplay.h  changevaluedisplay_bool.cpp  changevaluedisplay_bool.h  changevaluedisplay_chrono.h  changevaluedisplay_colorhelper.cpp  changevaluedisplay_colorhelper.h  changevaluedisplay_daylightsavingmode.cpp  changevaluedisplay_daylightsavingmode.h  changevaluedisplay_ip_address_t.cpp  changevaluedisplay_ip_address_t.h  changevaluedisplay_sntp_sync_mode_t.cpp  changevaluedisplay_sntp_sync_mode_t.h  changevaluedisplay_string.cpp  changevaluedisplay_string.h  changevaluedisplay_wifi_auth_mode_t.cpp  changevaluedisplay_wifi_auth_mode_t.h  changevaluedisplay_wifi_mode_t.cpp  changevaluedisplay_wifi_mode_t.h  checkboxicon.h  colorinterface.h  confirminterface.h  display.cpp  display.h  displaywithtitle.cpp  displaywithtitle.h  errorhandlerinterface.h  fontinterface.h  graphdisplay.h  icon.h  iconinterface.h  keyboardhelper.h  marginmenuitem.h  menudisplay.cpp  menudisplay.h  menuitem.h  (+24 more)
src/actions/: backproxyaction.h  dummyaction.h  multiaction.h  popscreenaction.h  pushscreenaction.h  setvalueaction.h  switchscreenaction.h  toggleboolaction.h
src/icons/: back.cpp  back.h  back_grey.cpp  back_grey.h  checked.cpp  checked.h  checked_grey.cpp  checked_grey.h  unchecked.cpp  unchecked.h  unchecked_grey.cpp  unchecked_grey.h
src/widgets/: centeredlabel.cpp  centeredlabel.h  graph.h  iconwidget.cpp  iconwidget.h  label.cpp  label.h  progressbar.cpp  progressbar.h  reverseprogressbar.cpp  reverseprogressbar.h  scrollinglabel.cpp  scrollinglabel.h  scrolllabel.cpp  scrolllabel.h  slider.cpp  slider.h  variablerangeprogressbar.cpp  variablerangeprogressbar.h  variablerangereverseprogressbar.cpp  variablerangereverseprogressbar.h  verticalmeter.cpp  verticalmeter.h  vumeter.cpp  vumeter.h
